compatibility-tests/compile-fail/tests/ui/report.stderr
error: `#[snafu::report]` may only be used on functions
 --> tests/ui/report.rs:4:1
  |
4 | const NOT_HERE: u8 = 42;
  | ^^^^^

error[E0277]: the trait bound `(): __InternalExtractErrorType` is not satisfied
 --> tests/ui/report.rs:6:1
  |
6 | #[snafu::report]
  | ^^^^^^^^^^^^^^^^ the trait `__InternalExtractErrorType` is not implemented for `()`
  |
  = help: the trait `__InternalExtractErrorType` is implemented for `Result<T, E>`
  = note: this error originates in the attribute macro `snafu::report` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ExitCode: __InternalExtractErrorType` is not satisfied
 --> tests/ui/report.rs:9:1
  |
9 | #[snafu::report]
  | ^^^^^^^^^^^^^^^^ the trait `__InternalExtractErrorType` is not implemented for `ExitCode`
  |
  = help: the trait `__InternalExtractErrorType` is implemented for `Result<T, E>`
  = note: this error originates in the attribute macro `snafu::report` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `snafu::Report<_>: From<()>` is not satisfied
 --> tests/ui/report.rs:6:1
  |
6 | #[snafu::report]
  | ^^^^^^^^^^^^^^^^ the trait `From<()>` is not implemented for `snafu::Report<_>`
  |
  = help: the trait `From<Result<(), _>>` is implemented for `snafu::Report<_>`
  = help: for that trait implementation, expected `Result<(), _>`, found `()`
  = note: this error originates in the attribute macro `snafu::report` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `snafu::Report<_>: From<ExitCode>` is not satisfied
 --> tests/ui/report.rs:9:1
  |
9 | #[snafu::report]
  | ^^^^^^^^^^^^^^^^ the trait `From<ExitCode>` is not implemented for `snafu::Report<_>`
  |
  = help: the trait `From<Result<(), _>>` is implemented for `snafu::Report<_>`
  = help: for that trait implementation, expected `Result<(), _>`, found `ExitCode`
  = note: this error originates in the attribute macro `snafu::report` (in Nightly builds, run with -Z macro-backtrace for more info)
